<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Efaz Company</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="userName">Username</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="website">Website url</string>
    <string name="next">Next</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Sign in</string>
    <string name="haveEmail">Already have Email</string>
    <string name="companydata">Company Data</string>
    <string name="organization_name">Organization Name</string>
    <string name="company_contacts">Company Contacts</string>
    <string name="donthave" tools:ignore="StringEscaping">Don't have an account?</string>
    <string name="email_valid">Email is not valid.</string>
    <string name="pass_valid">Password length at least 8</string>
    <string name="pass_confirm">Not The Same</string>
    <string name="pass_confirm2">Please Confirm password</string>
    <string name="fill_data">Please Fill data</string>
    <string name="website_error">Please enter correct website url</string>
    <string name="phone_error">Please enter correct phone number</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="edit">edit</string>
    <string name="youtube">add video for company as youtube url(optional)</string>
    <string name="svaeProfile">Save Profile</string>
    <string name="youtube_error">InValid Url</string>
    <string name="companyService">Our Service</string>
    <string name="company_name">Company Name</string>
    <string name="evvaz">EVVAZ</string>
    <string name="taj_mail">jobs@taj51.com</string>
    <string name="taj_website">www.taj51.com</string>
    <string name="service_name">Our Products</string>
    <string name="title">product title</string>
    <string name="explanation">Product Explanation</string>
    <string name="save_product">Save Product</string>
    <string name="cost">Product Cost</string>
    <string name="update_product">Update Product</string>
    <string name="confirmation">Please wait for confirmation of your account.</string>
    <string name="confirm2">We will send you an email when we confirm your account.</string>
    <string name="prompt">Select Your Category</string>
    <string name="org_name">Enter Organization Name</string>
    <string name="org_add">Enter Organization Address</string>
    <string name="org_youtube">Enter valid youtube url</string>
    <string name="email_error">Email not found</string>
    <string name="password_error">Password not correct</string>
    <string name="no_offer">No Offers For Your Company.</string>
    <string name="no_offers">No Offers Added.</string>
    <string name="update_profile">Update</string>
    <string name="available">Available</string>
    <string name="closed">Closed</string>
    <string name="ar">ar</string>
</resources>
