<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="260dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/efaz_logo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|bottom"
            android:background="#80000000">
            <TextView
                android:id="@+id/sin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="16dp"
                android:padding="16dp"/>
            <TextView
                android:id="@+id/sup"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textColor="#000000"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp"/>
        </LinearLayout>
    </FrameLayout>
    <customfonts.MyEditText
        android:id="@+id/mal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/email2"
        android:drawablePadding="16dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >
    <customfonts.MyEditText
        android:id="@+id/pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/lockers"
        android:drawablePadding="16dp"
        />

        <ImageButton
            android:id="@+id/sign_v_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/pswd"
            android:layout_centerVertical="true"
            android:background="#8ff0f0f4"
            android:src="@drawable/show"
            tools:ignore="RtlCompat" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >
    <customfonts.MyEditText
        android:id="@+id/cpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:background="#f0f0f4"
        android:textColor="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="12dp"
        android:drawableLeft="@drawable/lockers"
        android:drawablePadding="16dp"
        />
        <ImageButton
            android:id="@+id/sign_v_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/cpswd"
            android:layout_centerVertical="true"
            android:background="#8ff0f0f4"
            android:src="@drawable/show"
            tools:ignore="RtlCompat" />
    </RelativeLayout>
    <TextView
        android:id="@+id/act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnformate"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center"
        android:textAlignment="center"
        android:padding="14dp"
        android:text="@string/next"
        android:textSize="16dp"
        android:textColor="#fff"
        />
    <!--<customfonts.MyTextView-->
        <!--android:id="@+id/fboook"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:text="@string/haveEmail"-->
        <!--android:textSize="16dp"-->
        <!--android:layout_gravity="center" />-->
</LinearLayout>
</ScrollView>