<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="260dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@drawable/immacbytes"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center|bottom"
                android:background="#80000000">
                <customfonts.MyTextView
                    android:id="@+id/company_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company_contacts"
                    android:textSize="30dp"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:gravity="center"
                    android:padding="16dp"
                    android:textColor="#FFFFFF"/>
            </LinearLayout>
        </FrameLayout>



        <customfonts.MyEditText
            android:id="@+id/organization_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/website"
            android:inputType="text"
            android:textColor="#000"
            android:background="#f0f0f4"
            android:padding="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="16dp"
            />

        <customfonts.MyEditText
            android:id="@+id/organization_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="text"
            android:textColor="#000"
            android:background="#f0f0f4"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="16dp"
            />



        <TextView
            android:id="@+id/company_data_nxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnformate"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:gravity="center"
            android:textAlignment="center"
            android:padding="14dp"
            android:text="@string/signUp"
            android:textSize="16dp"
            android:textColor="#fff"
            />

    </LinearLayout>
</ScrollView>