<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/cover_u"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/product_image_u"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:scaleType="fitXY"
                android:src="@drawable/efaz_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal"
                android:paddingBottom="30dp">

                <ImageButton
                    android:id="@+id/edit_product_image_u"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="0dp"
                    android:background="#8fffffff"
                    android:src="@drawable/image2" />

                <customfonts.MyTextView
                    android:id="@+id/edit_u"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:gravity="right"
                    android:hint="@string/edit"
                    android:maxLength="12"
                    android:padding="4dp"
                    android:textColor="#181737"
                    android:textColorHint="#181737"
                    android:textSize="20dp" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linear_u"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/cover_u"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <customfonts.MyEditText
                    android:id="@+id/product_title_u"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:drawablePadding="16dp"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="#000" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <customfonts.MyEditText
                    android:id="@+id/product_explanation_u"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:drawablePadding="16dp"
                    android:gravity="top|left"
                    android:hint="@string/explanation"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:maxLines="10"
                    android:padding="12dp"
                    android:textColor="#000" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <customfonts.MyEditText
                    android:id="@+id/product_cost_u"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:drawablePadding="16dp"
                    android:hint="@string/cost"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textColor="#000" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="3"
                    android:text="Offer display duration"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <customfonts.MyEditText
                    android:id="@+id/expire_days_u"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="#f0f0f4"
                    android:hint="days"
                    android:inputType="number"
                    android:padding="12dp"
                    android:paddingLeft="12dp"
                    android:textColor="#000" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="3"
                    android:text="product duration"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <customfonts.MyEditText
                    android:id="@+id/deliver_days_u"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="#f0f0f4"
                    android:hint="days"
                    android:inputType="number"
                    android:padding="12dp"
                    android:paddingLeft="12dp"
                    android:textColor="#000" />

            </LinearLayout>


            />


            <customfonts.MyRegulerText
                android:id="@+id/product_save_u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/btnformate"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/update_product"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>